<resources>
    <string name="app_name">Android_App</string>

    <string name="form_username">Username:</string>
    <string name="form_password">Password:</string>

    <string name="btn_submit">Submit</string>
    <string name="btn_register">Register</string>
    <string name="id_label">ID:</string>
    <string name="age_label">Age:</string>
    <string name="bedcnt_label">Bed Count:</string>
    <string name="bathcnt_label">Bath Count:</string>
    <string name="addr_label">Address:</string>
</resources>
