<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_property"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.kyle.ie.property.view.PropertyActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:id="@+id/property_tv_idlabel"
        android:text="@string/id_label"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:id="@+id/property_tv_idvalue" />

    <TextView
        android:text="@string/age_label"
        android:textStyle="bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/property_tv_idlabel"
        android:layout_alignParentStart="true"
        android:layout_marginTop="25dp"
        android:id="@+id/property_tv_agelabel" />

    <TextView
        android:text=""
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:id="@+id/property_tv_agevalue"
        android:layout_alignTop="@+id/property_tv_agelabel" />

    <TextView
        android:text="@string/bedcnt_label"
        android:textStyle="bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/property_tv_agelabel"
        android:layout_alignParentStart="true"
        android:layout_marginTop="25dp"
        android:id="@+id/property_tv_bedcntlabel" />

    <TextView
        android:text=""
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/property_tv_bedcntlabel"
        android:layout_alignStart="@+id/property_tv_agevalue"
        android:id="@+id/property_tv_bedcntvalue" />

    <TextView
        android:text="@string/bathcnt_label"
        android:textStyle="bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/property_tv_bedcntlabel"
        android:layout_marginTop="25dp"
        android:id="@+id/property_tv_bathcntlabel" />

    <TextView
        android:text=""
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/property_tv_bathcntlabel"
        android:layout_alignStart="@+id/property_tv_bedcntvalue"
        android:id="@+id/property_tv_bathcntval" />

    <TextView
        android:text="@string/addr_label"
        android:textStyle="bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/property_tv_bathcntlabel"
        android:layout_alignStart="@+id/property_tv_bathcntlabel"
        android:layout_marginTop="25dp"
        android:id="@+id/property_tv_addr_label" />

    <TextView
        android:text=""
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/property_tv_addr_label"
        android:layout_alignParentStart="true"
        android:layout_marginTop="10dp"
        android:id="@+id/property_tv_addr_line1" />

    <TextView
        android:text=""
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/property_tv_addr_line1"
        android:layout_alignStart="@+id/property_tv_addr_line1"
        android:layout_marginTop="10dp"
        android:id="@+id/property_tv_addr_line2" />

    <TextView
        android:text=""
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/property_tv_addr_line2"
        android:layout_alignParentStart="true"
        android:layout_marginTop="10dp"
        android:id="@+id/property_tv_addr_city" />

    <TextView
        android:text=""
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/property_tv_addr_city"
        android:layout_alignStart="@+id/property_tv_addr_city"
        android:layout_marginTop="10dp"
        android:id="@+id/property_tv_addr_state" />

    <TextView
        android:text=""
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/property_tv_addr_state"
        android:layout_marginTop="10dp"
        android:id="@+id/property_tv_addr_country"
        android:layout_alignStart="@+id/property_tv_addr_state" />

    <TextView
        android:text=""
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/property_tv_addr_country"
        android:layout_alignStart="@+id/property_tv_addr_country"
        android:layout_marginTop="10dp"
        android:id="@+id/property_tv_addr_pcode" />

    <ListView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/property_tv_addr_pcode"
        android:layout_toEndOf="@+id/property_tv_addr_pcode"
        android:layout_marginTop="17dp"
        android:id="@+id/property_lv_appl" />
</RelativeLayout>